logs/ino.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/ino'...
Listing './lib/python3.5/site-packages/ino/commands'...
Compiling './lib/python3.5/site-packages/ino/commands/init.py'...
***   File "./lib/python3.5/site-packages/ino/commands/init.py", line 82
    except (IOError, os.error), why:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ino/commands/listmodels.py'...
***   File "./lib/python3.5/site-packages/ino/commands/listmodels.py", line 25
    print self.e.board_models().format()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ino/environment.py'...
***   File "./lib/python3.5/site-packages/ino/environment.py", line 28
    regex = re.compile(ur'^([^:]+:)?(\d+(\.\d+(\.\d+)?)?)')
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ino/make'...
Compiling './lib/python3.5/site-packages/ino/runner.py'...
***   File "./lib/python3.5/site-packages/ino/runner.py", line 78
    print colorize(str(exc), 'red')
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ino/templates'...
Listing './lib/python3.5/site-packages/ino/templates/blink'...
Listing './lib/python3.5/site-packages/ino/templates/blink/lib'...
Listing './lib/python3.5/site-packages/ino/templates/blink/src'...
Listing './lib/python3.5/site-packages/ino/templates/empty'...
Listing './lib/python3.5/site-packages/ino/templates/empty/lib'...
Listing './lib/python3.5/site-packages/ino/templates/empty/src'...
Listing './lib/python3.5/site-packages/ino-0.3.6.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/ordereddict-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
